<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:onClick="connectToService"
        android:text="@string/connect_to_service" />

    <Button
        android:id="@+id/button_post"
        android:onClick="connectToServicePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_get"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/connect_to_service_via_post" />

    <EditText
        android:id="@+id/editText"
        android:hint="@string/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_post"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

</RelativeLayout>
