<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/hotelNameEdit"
        android:hint="@string/hotel_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/reservationValueEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hotelNameEdit"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/reservation_value"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/createNewHotel"
        android:onClick="createNewHotelClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reservationValueEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:text="@string/create_hotel" />

</RelativeLayout>
